# social-badge-be

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CD.yml  ci.yml
alembic/: env.py
alembic/versions/: 11813fd78897_add_refresh_token_table.py  236bc1f3b79f_add_users_and_auth_providers_tables.py  3420dcb18a19_add_logo_url_to_organiser_templates.py  36d4af4e92a3_add_platform_templates_table.py  3f59271c2a41_split_user_name.py  8b2cd72d3e5c_add_template_instances_slug_and_status_.py  90aeb7c687d7_init.py  91c668fd22f3_merge_heads.py  9b9ff7309f4b_create_user_and_template_tables.py  a9f1c5d2e7b4_add_provider_user_id_to_auth_providers.py  a9fb7383568a_add_template_tables.py  c92cb51c6be2_add_refresh_token_table.py  e3714af1afe9_make_last_name_optional.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  contact.py  health.py  layouts.py  templates.py
app/core/: config.py  exceptions.py  rate_limit.py  slug.py  token.py
app/db/: redis.py  seed.py  session.py
app/models/: __init__.py  auth_provider.py  organiser_template.py  platform_template.py  refresh_tokens.py  template_instance.py  user.py
app/modules/templates/models/: badges_model.py  organiser_templates_model.py  platform_templates_model.py  temp_model.py  template_hashtags_model.py  template_hastags_model.py
app/schemas/: auth.py  contact.py  layout.py  response.py  template.py  templates.py
app/services/: auth_service.py  cloudinary_service.py  contact_service.py  email_service.py  layout_service.py  template_service.py
docs/: ci-cd-setup.md  swagger.yaml
tests/: conftest.py  test_health.py
tests/api/v1/: test_auth.py  test_contact.py  test_layouts.py  test_templates.py  test_verify.py
tests/core/: test_config.py  test_security.py  test_token.py
tests/models/: test_refresh_token.py  test_user.py
tests/schemas/: test_auth.py
tests/services/: test_auth_service.py  test_cloudinary_service.py  test_email_service.py
